// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`target transforms correctly using "target-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    target: 'async-node'
}
"
`;

exports[`target transforms correctly using "target-0" data 2`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    target: 'async-node'
}
"
`;

exports[`target transforms correctly using "target-1" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    target: node
}
"
`;

exports[`target transforms correctly using "target-1" data 2`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    target: 'node'
}
"
`;

exports[`target transforms correctly using "target-2" data 1`] = `
"module.exports = {
	entry: 'index.js',
	output: {
        filename: 'bundle.js',
        target: 'node'
    },
	target: 'node'
}
"
`;
